# Programming-Basics

./: .gitignore  CMakeLists.txt  README.md
Lab-1/: CMakeLists.txt  task-2.cpp  task-3.cpp  task-4.cpp  task-5.cpp
Lab-10/: CMakeLists.txt  books.txt  task.cpp
Lab-11/: CMakeLists.txt  task-1and2.cpp  task-3.cpp  text.txt
Lab-2/: CMakeLists.txt  task-1.cpp  task-2.cpp  task-3.cpp  task-4.cpp  task-5.cpp
Lab-3/: CMakeLists.txt  task-1.cpp  task-2.cpp  task-3.cpp  task-4.cpp  task-5.cpp
Lab-4/: CMakeLists.txt  task-1.cpp  task-2.cpp  task-3.cpp  task-4.cpp  task-5.cpp
Lab-5/: CMakeLists.txt  task.cpp
Lab-6/: CMakeLists.txt  task.cpp
Lab-7/: CMakeLists.txt  task.cpp
Lab-9/: CMakeLists.txt
Lab-9/task-1/: CMakeLists.txt  task-1.cpp
Lab-9/task-2/: CMakeLists.txt  task-2.cpp
Lab-9/task-3/: CMakeLists.txt  task-3.cpp
